Don't forget the little things!

--- a/01_agama/ekottarika/16/EA_16_08.md
+++ b/01_agama/ekottarika/16/EA_16_08.md
@@ -37,7 +37,7 @@ next: EA_16_09.html
 
 <ol class="notes-list">
 <li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0580b26" target="_blank">T125.2.580b26-c8</a>. I’m not aware of a direct parallel for this <em>sūtra</em>, but <a href="https://suttacentral.net/an2.11-20" target="_blank">AN 2.11-13</a> do speak of two powers, one of which is consideration (<em>paṭisaṅkhāna</em>). Here, consideration is intended to mean to consider, not to be considerate. More than likely, this <em>sūtra</em> is a variant on that same theme of two powers. [<a href="#ref1">back</a>]</p></li>
-<li id="n2"><p><em>supreme and correct awakening.</em> C. 無上、正真之道. Or, perhaps “path” instead of “awakening.” 道 (as in the Dao) was used to translate <em>bodhi</em>, or it could be read as “path” (the ordinary meaning of 道). This makes for ambiguous passages at times in Buddhist translations when it isn’t clear which is intended. In this passage, the confusion is increased by the use of 覺 ("awakening") to translate <em>bodhi</em> in the previous sentence. All in all, it seems more likely to me that 覺 and 道 are being used interchangeably given that EĀ is full of these kinds of errors and inconsistencies. [<a href="#ref2">back</a>]</p></li>
+<li id="n2"><p><em>supreme and correct awakening.</em> C. 無上、正真之道. Or, perhaps “path” instead of “awakening.” 道 (as in the Dao) was used to translate <em>bodhi</em>, or it could be read as “path” (the ordinary meaning of 道). This makes for ambiguous passages at times in Buddhist translations when it isn’t clear which is intended. In this passage, the confusion is increased by the use of 覺 (“awakening”) to translate <em>bodhi</em> in the previous sentence. All in all, it seems more likely to me that 覺 and 道 are being used interchangeably given that EĀ is full of these kinds of errors and inconsistencies. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
