--- a/01_agama/madhyama/MA_109.md
+++ b/01_agama/madhyama/MA_109.md
@@ -63,7 +63,7 @@ next: MA_110.html
 <li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0598b07" target="_blank">T26.1.598b7-8c20</a>. <a href="https://suttacentral.net/an10.54" target="_blank">AN 10.54</a> is a direct parallel, while <a href="https://suttacentral.net/mn114" target="_blank">MN 114</a> included a section that details the same list found in AN 10.54, making it tangentially parallel with this <em>sūtra</em>.</p>
 <p>This <em>sūtra</em> differs with AN 10.54 in only a couple superficial ways. One is that it lacks the metaphor of a person examining their face in a mirror as a way of explaining the benefit gained by examining oneself. Second, the list of items at the end that are avoided or used depending on whether they promote skillful qualities or not is slightly different. Beyond this, these are a few language issues that I discuss in more detail in the notes below. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p><em>inner calm … contemplate Dharma with the highest wisdom.</em> C. <span class="ch">內止⋯最上慧觀法</span>, P. <em>cetosamathassa … adhipaññādhammavipassanāya.</em> Here, calm (C. <span class="ch">止</span>, P. <em>samatha</em>, S. <em>śamatha</em>) and contemplation (C. <span class="ch">觀</span>, P. <em>vipassanā</em>, S. <em>vipaśyanā</em>) are treated as mutually supportive attainments. They are also both glossed with qualifiers: In C. the calm is within, while it’s explicitly calming of the heart in AN 10.54. Contemplation is contemplation of Dharma (or, alternatively, any particular thing) with the highest wisdom.</p>
-<p>It should be noted that “highest wisdom” (C. <span class="ch">最上慧</span>, S. <em>adhiprajñā</em>) interprets <em>adhi-</em> as <em>adhika</em>, which has a superlative meaning of “extraordinary, highest.” However, when <em>adhiprajñā</em> describes the training in Abhidharma, <em>adhi</em> is read as "with regard to,” and the term is then interpreted as “concerning wisdom.” The ambiguity of <em>adhi</em> as a prefix was an issue when context didn’t make clear how it should be read (cf. Edgerton 527 under <em>śikṣā</em>).</p>
+<p>It should be noted that “highest wisdom” (C. <span class="ch">最上慧</span>, S. <em>adhiprajñā</em>) interprets <em>adhi-</em> as <em>adhika</em>, which has a superlative meaning of “extraordinary, highest.” However, when <em>adhiprajñā</em> describes the training in Abhidharma, <em>adhi</em> is read as “with regard to,” and the term is then interpreted as “concerning wisdom.” The ambiguity of <em>adhi</em> as a prefix was an issue when context didn’t make clear how it should be read (cf. Edgerton 527 under <em>śikṣā</em>).</p>
 <p>It may be that <em>adhiprajñā</em> was here a tacit reference to Abhidharma training. It would make sense that a monk could “contemplate with the highest wisdom” while also lacking a calm heart if “highest wisdom” referred to the theoretical philosophy found in Abhidharma. This interpretation would also give us a more practical sense of what this <em>sūtra</em> is describing, namely alternative paths of a monk’s training. A monk might train in Abhidharma before developing <em>samādhi</em>, or he might pursue meditation before studying philosophy. In either case, the monk would need to master the other discipline to be well-rounded in his training. Presumably, the training in conduct is assumed to be completed beforehand. [<a href="#ref2">back</a>]</p></li>
 <li id="n3"><p><em>there’s clothing that none of which can be kept … there’s clothing that all of which can be kept.</em> C. <span class="ch">不得畜一切衣⋯得畜一切衣</span>, P. <em>cīvarampāhaṁ … sevitabbampi asevitabbampi.</em> Here, <span class="ch">畜</span> (“to store, stockpile, keep; tend to, care for”) is equivalent to P. <em>sevitabba</em> (S. <em>sevitavya</em>). This qualifier is applied to a number of things useful to a monk: clothes, food, seating, towns, and people. Except for towns or people, they are all things that could be kept or discarded, and a town or person could be figuratively kept or discarded in terms of whether a monk chooses to associate with them or not. I’ve therefore opted for this reading of <span class="ch">畜</span>.</p>
 <p>It should be noted, however, that S. <em>sevitavya</em> does sometimes have the meaning “to be tended, taken care of,” whereas this reading is not recognized in P. This would explain the word choice in the C. translation: <span class="ch">畜</span> typically refers to the raising of livestock or children. The meaning “to keep or store” is an extension of that context: animal husbandry was often a source of wealth in terms of the number of animals that were kept and cared for.</p>
