--- a/01_agama/madhyama/MA_153.md
+++ b/01_agama/madhyama/MA_153.md
@@ -92,7 +92,7 @@ He replied, “No, Gautama.”
 21\. “Suppose they see another person who has yet to part with desire. They’re eaten by the craving for desires and burned by a fever for desires. The five merits of desire are lovely, wished for, and associated with what’s desirable. When they see this person pursuing [desires], they don’t praise that, nor are they delighted by that.
 {:#p21}
 
-22\. “Sugandika, what do you think? Suppose someone possesses these pleasures that are caused by desire and craving for desires. When they’re enjoying these pleasures, they don’t praise that because it’s contemptible, nor is it a delight to them because it’s contemptible. Sugandika, would you have something to say to them?"
+22\. “Sugandika, what do you think? Suppose someone possesses these pleasures that are caused by desire and craving for desires. When they’re enjoying these pleasures, they don’t praise that because it’s contemptible, nor is it a delight to them because it’s contemptible. Sugandika, would you have something to say to them?”
 {:#p22}
 
 He replied, “No, Gautama.”
@@ -222,7 +222,7 @@ Sugandika answered, “Gautama, someone who speaks in this way doesn’t really 
 * {:.verse}“‘Good health is the supreme blessing,\\
 And <em>nirvāṇa</em> is the supreme happiness.\\
 Of all paths, it’s the noble eightfold path\\
-That stands in the safety of the immortal.’"
+That stands in the safety of the immortal.’”
 
 55\. There was a crowd of people listening to them. After they heard this verse, that group of heretics turned it over and repeated it to each other, but they couldn’t understand what it meant. Having heard it, they wanted to pursue that teaching, but they were all fools and returned to deceiving each other.
 {:#p55}
@@ -301,7 +301,7 @@ He answered, “No, Gautama.”
 6. {:#n6} <em>pursuing [forms]</em>. The C. here is <span class="ch">行</span>, which is parallel to P. <em>paṭisevante</em> (from the v. <em>paṭisevati</em>), which means “follows, pursues, practices, indulges in.” “Pursue” is not a typical reading for <span class="ch">行</span> (which usu. means “walk, do, practice, act”), but <span class="ch">行</span> seems an imprecise translation in this passage.<br/>
 <em>don’t praise that</em>. C. <span class="ch">不稱彼</span>, P. <em>tesaṁ na pihemi</em>. C. <span class="ch">稱</span> means “to praise, admire,” whereas P. <em>piheti</em> means “to covet, envy.” In C., it’s not clear whether the pronoun <span class="ch">彼</span> refers to the person or to their practice of enjoying sensual desires. In P., the distinction is made grammatically. The natural reading in C. would be that the person is both not admired and not delightful, but I’ve followed the P. assuming the original here was the same grammatically. [\[back\]](#ref6)
 7. {:#n7} <em>five merits of desire</em>. C. <span class="ch">五欲功徳</span>, P. <em>pañca kāmaguṇa</em>. This term refers to the five sensory objects of desire, apparently looking forward to their heavenly counterparts. P/S. <em>guṇa</em> is a word with a number of possible meanings, the most common in Buddhist contexts being “merit, quality, feature, thread, subdivision.” In this case, it’s typically interpreted as “thread” or “part” in Theravāda Buddhism, but the C. translation (功徳) clearly means “merit” or “virtue.” This might be a reference to these desires being rewards of good <em>karma</em> when one is born in the human or heavenly worlds, and these two outcomes will be addressed shortly by the Buddha. [\[back\]](#ref7)
-8. {:#n8} <em>limbs to be uninjured.</em> C. <span class="ch">不壞諸根</span>, S. <em>anupahatendriya</em>. The C. appears to be a lit. translation of an Indic term for being physically disabled due to injury. The term typically translated as "faculties" (C. <span class="ch">諸根</span>, S. <em>indriya</em>) in Buddhist texts usually refers to the senses, but does include the rest of the physical body that give a person abilities, like the limbs. So, I’ve translated it as "limbs" in this context.<br/>
+8. {:#n8} <em>limbs to be uninjured.</em> C. <span class="ch">不壞諸根</span>, S. <em>anupahatendriya</em>. The C. appears to be a lit. translation of an Indic term for being physically disabled due to injury. The term typically translated as "faculties" (C. <span class="ch">諸根</span>, S. <em>indriya</em>) in Buddhist texts usually refers to the senses, but does include the rest of the physical body that give a person abilities, like the limbs. So, I’ve translated it as “limbs” in this context.<br/>
 Interestingly, though, the same term occurs in MN 75 in the later context of being mentally unsound in the discussion of having mistaken perceptions. There, it refers to mental faculties rather than physical ones. I wonder if a shared ancestor to MN 75 and MĀ 153 had used the term in both ways to link up the concrete metaphor of physical illness (leprosy) for a mental illness (delusion). [\[back\]](#ref8)
 9. {:#n9} At this point, a Chinese copyist apparently lost his place and duplicated passages twice. The first duplication puts part of the Buddha’s reply into Sugandika’s mouth here. The second duplication has the Buddha repeating himself verbatim in the next paragraph. I’ve removed both duplications from my translation.
 
