--- a/01_agama/dirgha/DA_29.md
+++ b/01_agama/dirgha/DA_29.md
@@ -27,7 +27,7 @@ The Bhagavān then silently accepted his invitation.
 5\. The brahmin saw that the Buddha was silent. Once he knew that he had the Buddha’s assent, he rose from his seat, circled the Buddha, and left. He wasn’t far away from the Buddha when a bad view occurred to him: “Mendicants and brahmins often know the good Dharma, and many are their proofs, but they shouldn’t teach it to other people. They simply know it for themselves and desist from discussing it with others. It’s like a man who builds a new prison after he destroys an old prison. It’s a greedy, bad, and unwholesome thing!”
 {:#p5}
 
-6\. After the brahmin returned to the sal grove, he then prepared a variety of delicious food and drink that night. When he arrived, the brahmin said to his barber, “Remember my words and go to the rosewood grove. Tell the mendicant Gautama, ‘Once morning has arrived, you should know that it’s time.’"
+6\. After the brahmin returned to the sal grove, he then prepared a variety of delicious food and drink that night. When he arrived, the brahmin said to his barber, “Remember my words and go to the rosewood grove. Tell the mendicant Gautama, ‘Once morning has arrived, you should know that it’s time.’”
 {:#p6}
 
 7\. His barber accepted and performed his instructions. He went to the Buddha and bowed at the Bhagavān’s feet. “Once the day has come, you should know that it’s time.”
