Adjusted the punct. and trans. of some abbreviated lists.

--- a/01_agama/samyukta/01/SA1_157.md
+++ b/01_agama/samyukta/01/SA1_157.md
@@ -18,8 +18,8 @@ next: SA1_158.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.11b2'>爾時，世尊告諸比丘： 「有五受陰。 云何為五？ 色受陰⋯受⋯想⋯行⋯識受陰。 若諸沙門、婆羅門見有我者，一切皆於此五受陰見我。 諸沙門、婆羅門見色是我，色異我，我在色，色在我。 見受⋯想⋯行⋯識是我，識異我，我在識，識在我。</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are five acquired aggregates. What are the five? They are the acquired aggregate of form … feeling … conception … volition … the acquired aggregate of awareness. If ascetics and brahmins see some self, they all see these five acquired aggregates as self. Ascetics and brahmins see form as self, form as different than self, self as present in form, or form as present in self. They see feeling … conception … volition … awareness as self, awareness as different than self, self as present in awareness, or awareness as present in self.</td>
+    <td class='ch' title='t99.2.11b2'>爾時，世尊告諸比丘： 「有五受陰。 云何為五？ 色受陰，受⋯想⋯行⋯識受陰。 若諸沙門、婆羅門見有我者，一切皆於此五受陰見我。 諸沙門、婆羅門見色是我，色異我，我在色，色在我。 見受⋯想⋯行⋯識是我，識異我，我在識，識在我。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are five acquired aggregates. What are the five? They are the acquired aggregate of form, feeling … conception … volition … and the acquired aggregate of awareness. If ascetics and brahmins see some self, they all see these five acquired aggregates as self. Ascetics and brahmins see form as self, form as different than self, self as present in form, or form as present in self. They see feeling … conception … volition … awareness as self, awareness as different than self, self as present in awareness, or awareness as present in self.</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.11b7'>「愚癡、無聞凡夫以無明故見色是我、異我、相在。 言『我真實不捨。 以不捨故，諸根增長。 諸根長已，增諸觸。 六觸入處所觸故。』 愚癡、無聞凡夫起苦樂覺，從觸入處起。 何等為六？ 謂眼觸入處⋯耳⋯鼻⋯舌⋯身⋯意觸入處。</td>
