--- a/01_agama/samyukta/01/SA1_56.md
+++ b/01_agama/samyukta/01/SA1_56.md
@@ -18,8 +18,8 @@ next: SA1_57.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.15b11'>爾時，世尊告諸比丘： 「有五受陰。 云何為五？ 色受陰⋯受⋯想⋯行⋯識受陰。 觀此五受陰是生滅法。 所謂：『此色、此色集、此色滅。 此受⋯想⋯行⋯識、此識集、此識滅。』</td>
-    <td id='p2'>2. It was then that the Bhagavān told the monks, “There are five acquired aggregates. What are the five? The acquired aggregate of form … feeling … conception … volition … the acquired aggregate of awareness. Observe these five acquired aggregates as things that arise and cease. That is: ‘This is form, this is the formation of form, and this is the cessation of form. This is feeling … conception … volition … awareness, this is the formation of awareness, and this is the cessation of awareness.’</td>
+    <td class="ch" title='t125.2.15b11'>爾時，世尊告諸比丘： 「有五受陰。 云何為五？ 色受陰，受⋯想⋯行⋯識受陰。 觀此五受陰是生滅法。 所謂：『此色、此色集、此色滅。 此受⋯想⋯行⋯識、此識集、此識滅。』</td>
+    <td id='p2'>2. It was then that the Bhagavān told the monks, “There are five acquired aggregates. What are the five? The acquired aggregate of form, feeling … conception … volition … and the acquired aggregate of awareness. Observe these five acquired aggregates as things that arise and cease. That is: ‘This is form, this is the formation of form, and this is the cessation of form. This is feeling … conception … volition … awareness, this is the formation of awareness, and this is the cessation of awareness.’</td>
   </tr>
   <tr>
     <td class="ch" title='t125.2.15b14'>「云何色集？云何色滅？ 云何受⋯想⋯行⋯識集？云何受⋯想⋯行⋯識滅？ 愛喜集是色集，愛喜滅是色滅。 觸集是受、想、行集，觸滅是受、想、行滅。 名色集是識集，名色滅是識滅。</td>
