--- a/01_agama/samyukta/01/SA1_57.md
+++ b/01_agama/samyukta/01/SA1_57.md
@@ -18,8 +18,8 @@ next: SA1_58.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.15b23'>爾時，世尊告諸比丘： 「有五受陰。 何等為五？ 所謂色受陰⋯受⋯想⋯行⋯識受陰。 善哉比丘不樂於色，不讚歎色，不取於色，不著於色。 善哉比丘不樂於受⋯想⋯行⋯識，不讚歎識，不取於識，不著於識。 所以者何？</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are five acquired aggregates. What are the five? They are the acquired aggregate of form … feeling … conception … volition … and the acquired aggregate of awareness. It’s good that a monk isn’t pleased by form, doesn’t praise form, doesn’t take form, and isn’t attached to form. It’s good that a monk isn’t pleased by feeling … conception … volition … awareness, doesn’t praise awareness, doesn’t take awareness, and isn’t attached to awareness. Why is that?</td>
+    <td class="ch" title='t125.2.15b23'>爾時，世尊告諸比丘： 「有五受陰。 何等為五？ 所謂色受陰，受⋯想⋯行⋯識受陰。 善哉比丘不樂於色，不讚歎色，不取於色，不著於色。 善哉比丘不樂於受⋯想⋯行⋯識，不讚歎識，不取於識，不著於識。 所以者何？</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are five acquired aggregates. What are the five? They are the acquired aggregate of form, feeling … conception … volition … and the acquired aggregate of awareness. It’s good that a monk isn’t pleased by form, doesn’t praise form, doesn’t take form, and isn’t attached to form. It’s good that a monk isn’t pleased by feeling … conception … volition … awareness, doesn’t praise awareness, doesn’t take awareness, and isn’t attached to awareness. Why is that?</td>
   </tr>
   <tr>
     <td class="ch" title='t125.2.15b27'>「若比丘不樂於色，不讚歎色，不取於色，不著於色則於色不樂，心得解脫。 如是，受⋯想⋯行⋯識⋯不樂於識，不讚歎識，不取於識，不著於識則於識不樂，心得解脫。 若比丘不樂於色，心得解脫。 如是，受⋯想⋯行⋯識不樂，心得解脫。 不滅不生，平等捨住，正念正智。</td>
