--- a/01_agama/samyukta/01/SA1_58.md
+++ b/01_agama/samyukta/01/SA1_58.md
@@ -18,8 +18,8 @@ next: SA1_59.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.15c15'>爾時，世尊告諸比丘： 「有五受陰。 何等為五？ 謂色受陰⋯受⋯想⋯行⋯識受陰。</td>
-    <td id='p2'>2. It was then that the Bhagavān told the monks, “There are five acquired aggregates. What are the five? They are the acquired aggregate of form … feeling … conception … volition … and the acquired aggregate of awareness.</td>
+    <td class='ch' title='t99.2.15c15'>爾時，世尊告諸比丘： 「有五受陰。 何等為五？ 謂色受陰，受⋯想⋯行⋯識受陰。</td>
+    <td id='p2'>2. It was then that the Bhagavān told the monks, “There are five acquired aggregates. What are the five? They are the acquired aggregate of form, feeling … conception … volition … and the acquired aggregate of awareness.</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.15c16'>「云何色受陰？ 所有色，彼一切四大，及四大所造色。 是名為色受陰。</td>
