--- a/01_agama/samyukta/01/SA1_59.md
+++ b/01_agama/samyukta/01/SA1_59.md
@@ -18,8 +18,8 @@ next: SA1_60.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.16a20'>爾時，世尊告諸比丘： 「有五受陰？ 謂色受陰⋯受⋯想⋯行⋯識受陰。 愚癡、無聞凡夫無慧無明，於五受陰生我見繫著。 使心繫著而生貪欲。 比丘，多聞、聖弟子有慧、有明，於此五受陰不為見我繫著，使心結縛而起貪欲。</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “What are the five acquired aggregates? They are the acquired aggregate of form … feeling … conception … volition … the acquired aggregate of awareness. A foolish and unlearned man without wisdom or insight becomes tied to views of self about these five acquired aggregates that arise. Greed is produced when his mind is tied to them. Monks, a well-versed noble disciple with wisdom and insight doesn’t become tied to views of self about these five acquired aggregates or is greed produced when his mind is tied to them.</td>
+    <td class='ch' title='t99.2.16a20'>爾時，世尊告諸比丘： 「有五受陰？ 謂色受陰，受⋯想⋯行⋯識受陰。 愚癡、無聞凡夫無慧無明，於五受陰生我見繫著。 使心繫著而生貪欲。 比丘，多聞、聖弟子有慧、有明，於此五受陰不為見我繫著，使心結縛而起貪欲。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “What are the five acquired aggregates? They are the acquired aggregate of form, feeling … conception … volition … and the acquired aggregate of awareness. A foolish and unlearned man without wisdom or insight becomes tied to views of self about these five acquired aggregates that arise. Greed is produced when his mind is tied to them. Monks, a well-versed noble disciple with wisdom and insight doesn’t become tied to views of self about these five acquired aggregates or is greed produced when his mind is tied to them.</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.16a25'>「云何愚癡、無聞凡夫無慧無明，於五受陰見我繫著，使心結縛而生貪欲？ 比丘，愚癡、無聞凡夫無慧無明，見色是我、異我、相在。 如是受、想、行、識，是我、異我、相在。 如是愚癡、無聞凡夫無慧無明，於五受陰說我繫著，使心結縛而生貪欲。</td>
