--- a/01_agama/samyukta/01/SA1_60.md
+++ b/01_agama/samyukta/01/SA1_60.md
@@ -18,8 +18,8 @@ next: SA1_61.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class='ch' title='t99.2.16b14'>爾時，世尊告諸比丘： 「有五受陰。 謂色受陰⋯受⋯想⋯行⋯識受陰。 比丘，若沙門、婆羅門計有我，一切皆於此五受陰計有我。 何等為五？</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are five acquired aggregates. They are the acquired aggregate of form … feeling … conception … volition … the acquired aggregate of awareness. Monks, if ascetics or brahmins suppose there is a self, they would all suppose there is a self in relation to these five acquired aggregates. What are the five?</td>
+    <td class='ch' title='t99.2.16b14'>爾時，世尊告諸比丘： 「有五受陰。 謂色受陰，受⋯想⋯行⋯識受陰。 比丘，若沙門、婆羅門計有我，一切皆於此五受陰計有我。 何等為五？</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are five acquired aggregates. They are the acquired aggregate of form, feeling … conception … volition … and the acquired aggregate of awareness. Monks, if ascetics or brahmins suppose there is a self, they would all suppose there is a self in relation to these five acquired aggregates. What are the five?</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.16b17'>「諸沙門、婆羅門於色見是我、異我、相在。 如是受、想、行、識，見是我、異我、相在。</td>
