--- a/01_agama/samyukta/01/SA1_153.md
+++ b/01_agama/samyukta/01/SA1_153.md
@@ -18,8 +18,8 @@ next: SA1_154.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.9b8'>爾時，世尊告諸比丘： 「有五受陰：色受陰⋯受⋯想⋯行⋯識受陰。 我於此五受陰五種如實知：色如實知⋯色集⋯色味⋯色患⋯色離如實知。 如是，受⋯想⋯行⋯識如實知⋯識集⋯識味⋯識患⋯識離如實知。</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are five acquired aggregates: the acquired aggregate of form … feeling … conception … volition … the acquired aggregate of awareness. I truly know these five acquired aggregates in five ways: I truly know form … form’s formation … form’s enjoyment … form’s trouble … truly know form’s escape. Thus, I truly know feeling … conception … volition … awareness … awareness’ formation … awareness’ enjoyment … awareness’ trouble … truly know awareness’ escape.</td>
+    <td class="ch" title='t99.2.9b8'>爾時，世尊告諸比丘： 「有五受陰：色受陰，受⋯想⋯行⋯識受陰。 我於此五受陰五種如實知：色如實知⋯色集⋯色味⋯色患⋯色離如實知。 如是，受⋯想⋯行⋯識如實知⋯識集⋯識味⋯識患⋯識離如實知。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are five acquired aggregates: the acquired aggregate of form, feeling … conception … volition … and the acquired aggregate of awareness. I truly know these five acquired aggregates in five ways: I truly know form … form’s formation … form’s enjoyment … form’s trouble … truly know form’s escape. Thus, I truly know feeling … conception … volition … awareness … awareness’ formation … awareness’ enjoyment … awareness’ trouble … truly know awareness’ escape.</td>
   </tr>
 <tr>
   <td class="ch" title='t99.2.9b12'></td>
