--- a/01_agama/madhyama/MA_001.md
+++ b/01_agama/madhyama/MA_001.md
@@ -137,7 +137,7 @@ next: MA_002.html
   </tr>
   <tr>
     <td class='ch' title='t26.1.421c2'>「若有比丘善知眾者，謂知： 『此刹利眾、此梵志眾、此居士眾、此沙門眾。 我於彼眾應如是去、如是住、如是坐、如是語、如是默。』 是謂比丘善知眾也。</td>
-    <td id='p20'>20. “Suppose a monk knows the community well, which is to say that he knows: ‘This is a community of warriors … this is a community of priests … this is a community of householders … this is a community of ascetics. In that community, I should depart in this way, stand in this way, sit in this way, speak in this way, and be silent in this way.’ This is called a monk who knows the community well.</td>
+    <td id='p20'>20. “Suppose a monk knows the community well, which is to say that he knows: ‘This is a community of warriors … this is a community of brahmins … this is a community of householders … this is a community of ascetics. In that community, I should depart in this way, stand in this way, sit in this way, speak in this way, and be silent in this way.’ This is called a monk who knows the community well.</td>
   </tr>
 <tr>
   <td class='ch' title='t26.1.421c5'></td>
