typo no. > nos. for multiple sutras

--- a/01_agama/samyukta/01/SA1_62-73.md
+++ b/01_agama/samyukta/01/SA1_62-73.md
@@ -48,7 +48,7 @@ next: SA1_138.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 65 in the <cite>Taisho</cite> edition and no. 62-73 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0017a23" target="_blank">T99.2.17a23-b15</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0107a03" target="_blank">Y30.107a3-8a1</a>). The basic template is similar to <a href="https://suttacentral.net/sn22.5" target="_blank">SN 22.5</a>-<a href="https://suttacentral.net/sn22.6" target="_blank">6</a>. However, in this case, that template has been replicated with twelve different verbs for understanding.</p>
+<li id="n1"><p>This is <em>sūtra</em> no. 65 in the <cite>Taisho</cite> edition and nos. 62-73 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0017a23" target="_blank">T99.2.17a23-b15</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0107a03" target="_blank">Y30.107a3-8a1</a>). The basic template is similar to <a href="https://suttacentral.net/sn22.5" target="_blank">SN 22.5</a>-<a href="https://suttacentral.net/sn22.6" target="_blank">6</a>. However, in this case, that template has been replicated with twelve different verbs for understanding.</p>
 <p>This will be repeated with <a href="SA1_74-85.html" target="_blank">SĀ 1.74-85 (66)</a>, <a href="SA1_86-97.html" target="_blank">SĀ 1.86-97 (67)</a>, and <a href="SA1_98-109.html" target="_blank">SĀ 1.98-109 (68)</a>. Each of these sets of twelve <em>sūtra</em>s change the subject that’s understood and replicate the template with the same twelve synonyms for understanding. Thus, four variations are multiplied in twelve ways to arrive at a total of 48 <em>sūtra</em>s. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p>This conclusion is very similar to the conclusions that are found throughout the <em>Ekottarika Āgama</em>. The format is such that the Buddha sums up the teaching with a brief axiom to follow and then exhorts the monks to train in that way. There is no mention of training here, but the effect is the same. This type of concluding statement is scattered here and there in both Theravāda and Sarvāstivāda EBTs, but it’s found at the end of the majority of <em>sūtra</em>s in EĀ. [<a href="#ref2">back</a>]</p></li>
 <li id="n3"><p><em>“be familiar with,” “cultivate,” “cultivate often,” … twelve </em>sūtra<em>s</em>. C. <span class="ch">親近、親近修習⋯二經</span>. The <cite>Taisho</cite> reading of this passage has apparently suffered some corruption. We can tell this first by the fact that the list of items totals only to eleven <em>sūtra</em>s. This might be fine, but it ends with mention of “two <em>sūtra</em>s,” which makes little sense. The notes to the next three <em>sūtra</em>s abbreviate the list of variant keywords but mention a total of twelve <em>sūtra</em>s.</p>
