--- a/01_agama/samyukta/02/SA2_11-14.md
+++ b/01_agama/samyukta/02/SA2_11-14.md
@@ -40,7 +40,7 @@ next: SA2_15-39.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 195 in the <cite>Taisho</cite> edition and no. 189-92 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0050a11" target="_blank">T99.2.50a11-23</a>). This group of <em>sūtra</em>s resembles <a href="https://suttacentral.net/sn35.1" target="_blank">SN 35.1-12</a>, but these <em>sūtra</em>s apply the template to everything, which is defined in the same way as in <a href="https://suttacentral.net/sn35.23" target="_blank">SN 35.23-32</a>. Overall, I would say these <em>sūtra</em>s represent variations on the same theme, recombining equivalent passages to arrive at the same the basic meaning. [<a href="#ref1">back</a>]</li>
+<li id="n1">This is <em>sūtra</em> no. 195 in the <cite>Taisho</cite> edition and nos. 189-92 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0050a11" target="_blank">T99.2.50a11-23</a>). This group of <em>sūtra</em>s resembles <a href="https://suttacentral.net/sn35.1" target="_blank">SN 35.1-12</a>, but these <em>sūtra</em>s apply the template to everything, which is defined in the same way as in <a href="https://suttacentral.net/sn35.23" target="_blank">SN 35.23-32</a>. Overall, I would say these <em>sūtra</em>s represent variations on the same theme, recombining equivalent passages to arrive at the same the basic meaning. [<a href="#ref1">back</a>]</li>
 </ol>
 <hr/>
 
