--- a/01_agama/samyukta/02/SA2_123-125.md
+++ b/01_agama/samyukta/02/SA2_123-125.md
@@ -44,7 +44,7 @@ next: SA2_126.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 230 in the <cite>Taisho</cite> edition and no. 301-303 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0056a24" target="_blank">T99.2.56a24-b10</a>). It’s parallel to <a href="https://suttacentral.net/sn35.65" target="_blank">SN 35.65-66</a> and <a href="https://suttacentral.net/sn35.68" target="_blank">68</a>. The only major difference is that here dependent origination and cessation are mentioned as the reasoning behind defining these three things in terms of sensory experience. [<a href="#ref1">back</a>]</p></li>
+<li id="n1"><p>This is <em>sūtra</em> no. 230 in the <cite>Taisho</cite> edition and nos. 301-303 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0056a24" target="_blank">T99.2.56a24-b10</a>). It’s parallel to <a href="https://suttacentral.net/sn35.65" target="_blank">SN 35.65-66</a> and <a href="https://suttacentral.net/sn35.68" target="_blank">68</a>. The only major difference is that here dependent origination and cessation are mentioned as the reasoning behind defining these three things in terms of sensory experience. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p>The full passage here would presumably include the remaining chain of dependent origination. Feeling, craving, grasping, existence, birth, old age, illness, death, grief, sorrow, pain, and trouble have been omitted. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
