--- a/01_agama/samyukta/02/SA2_58-74.md
+++ b/01_agama/samyukta/02/SA2_58-74.md
@@ -44,7 +44,7 @@ next: SA2_75.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 201 in the <cite>Taisho</cite> edition and no. 236-52 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0051c11" target="_blank">T99.2.51c11-28</a>). This group of <em>sūtra</em>s are like <a href="https://suttacentral.net/sn35.53" target="_blank">SN 35.53-59</a>, but there are many more keywords used to create unique <em>sūtra</em>s here. The direct correspondence with the Pali <em>sutta</em>s is as follows: SĀ 2.74 ≈ SN 35.53, 60 ≈ 54, 58 ≈ 56, 61 ≈ 58.<br/>The other versions share a very similar template but aren’t directly equivalent to each other. It should also be noted that all of these <em>sūtra</em>s teach a contemplation of impermanence, whereas <a href="https://suttacentral.net/sn35.55" target="_blank">SN 35.55-59</a> switch to contemplation of things not being self, which created yet another set of variants. [<a href="#ref1">back</a>]</li>
+<li id="n1">This is <em>sūtra</em> no. 201 in the <cite>Taisho</cite> edition and nos. 236-52 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0051c11" target="_blank">T99.2.51c11-28</a>). This group of <em>sūtra</em>s are like <a href="https://suttacentral.net/sn35.53" target="_blank">SN 35.53-59</a>, but there are many more keywords used to create unique <em>sūtra</em>s here. The direct correspondence with the Pali <em>sutta</em>s is as follows: SĀ 2.74 ≈ SN 35.53, 60 ≈ 54, 58 ≈ 56, 61 ≈ 58.<br/>The other versions share a very similar template but aren’t directly equivalent to each other. It should also be noted that all of these <em>sūtra</em>s teach a contemplation of impermanence, whereas <a href="https://suttacentral.net/sn35.55" target="_blank">SN 35.55-59</a> switch to contemplation of things not being self, which created yet another set of variants. [<a href="#ref1">back</a>]</li>
 <li id="n2"><em>all the bonds.</em> This item appears twice in the variants note by the Chinese translator. I can only see perhaps a slight difference in the verbs used (“successive stop to” vs. simply “stop”). Otherwise, it appears to be a duplication.  [<a href="#ref2">back</a>]</li>
 </ol>
 <hr/>
