changed translation of "self pride" to "self conceit"

--- a/01_agama/samyukta/02/SA2_49-56.md
+++ b/01_agama/samyukta/02/SA2_49-56.md
@@ -19,7 +19,7 @@ next: SA2_57.html
   </tr>
   <tr>
     <td class="ch" title='t99.2.50c28'>爾時，世尊告羅睺羅： 「云何知、云何見於此識身及外一切相無有我、我所、我慢使繫著？」</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed Rāhula, “How do you know and see [49] this body of awareness … [50] the outer sense fields of forms, sounds, odors, flavors, touches, and ideas … [51] visual awareness … auditory … olfactory … gustatory … somatic … and mental awareness … [52] visual contact … auditory … olfactory … gustatory … somatic … and mental contact … [53] feelings that arise from visual contact … auditory … olfactory … gustatory … somatic … and feelings that arise from mental contact … [54] notions that arise from visual contact … auditory … olfactory … gustatory … somatic … and notions that arise from mental contact … [55] intentions that arise from visual contact … auditory … olfactory … gustatory … somatic … and intentions that arise from mental contact … [56] cravings that arise from visual contact … auditory … olfactory … gustatory … somatic … and cravings that arise from mental contact and all external signs without having any binding attachments to self, what belongs to self, and the tendency of self pride?”</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed Rāhula, “How do you know and see [49] this body of awareness … [50] the outer sense fields of forms, sounds, odors, flavors, touches, and ideas … [51] visual awareness … auditory … olfactory … gustatory … somatic … and mental awareness … [52] visual contact … auditory … olfactory … gustatory … somatic … and mental contact … [53] feelings that arise from visual contact … auditory … olfactory … gustatory … somatic … and feelings that arise from mental contact … [54] notions that arise from visual contact … auditory … olfactory … gustatory … somatic … and notions that arise from mental contact … [55] intentions that arise from visual contact … auditory … olfactory … gustatory … somatic … and intentions that arise from mental contact … [56] cravings that arise from visual contact … auditory … olfactory … gustatory … somatic … and cravings that arise from mental contact and all external signs without having any binding attachments to self, what belongs to self, and the tendency of self conceit?”</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.51a1'>羅睺羅白佛言： 「世尊是法根、法眼、法依。 善哉，世尊，當為諸比丘廣說此義！ 諸比丘聞已，當受奉行。」</td>
@@ -31,7 +31,7 @@ next: SA2_57.html
   </tr>
   <tr>
     <td class="ch" title='t99.2.51a7'>「羅睺羅，如是知、如是見我此識身及外一切相，我、我所、我慢使繫著不生。 羅睺羅，如是比丘越於二。 離諸相，寂滅解脫。 羅睺羅，如是比丘斷諸愛欲，轉去諸結，究竟苦邊。」</td>
-    <td id='p5'>5. “Rāhula, when you know and see this conscious body <em>and so on</em> and all external signs in this way, binding attachments to self, what belongs to self, and the tendency of self pride won’t arise. Rāhula, such a monk goes beyond both [of these internal and external signs]. Being free of these signs, he is tranquil and liberated. Rāhula, such a monk eliminates the craving of desires, turns away from the bonds, and reaches the final end of suffering.”</td>
+    <td id='p5'>5. “Rāhula, when you know and see this conscious body <em>and so on</em> and all external signs in this way, binding attachments to self, what belongs to self, and the tendency of self conceit won’t arise. Rāhula, such a monk goes beyond both [of these internal and external signs]. Being free of these signs, he is tranquil and liberated. Rāhula, such a monk eliminates the craving of desires, turns away from the bonds, and reaches the final end of suffering.”</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.51a11'>佛說此經已，羅睺羅聞佛所說歡喜，奉行。</td>
