--- a/01_agama/samyukta/01/SA1_30.md
+++ b/01_agama/samyukta/01/SA1_30.md
@@ -19,7 +19,7 @@ next: SA1_31.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.5b6'>爾時，世尊告羅睺羅： 「比丘，云何知、云何見我此識身及外境界一切相無有我、我所見、我慢使繫著？」</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed Rāhula, “How does a monk know and how does he see this body of awareness and all the signs of the external world such that he has no binding attachments to views of self and what belongs to self or to the tendency of self pride?”</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed Rāhula, “How does a monk know and how does he see this body of awareness and all the signs of the external world such that he has no binding attachments to views of self and what belongs to self or to the tendency of self conceit?”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.5b8'>羅睺羅白佛言： 「世尊為法主、為導、為覆。 善哉，世尊當為諸比丘演說此義！ 諸比丘從佛聞已，當受持、奉行。」</td>
@@ -43,11 +43,11 @@ next: SA1_31.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.5b19'>「比丘如是知、如是見我此識身及外境界一切相無有我、我所見、我慢使繫著。</td>
-    <td id='p6'>6. “A monk who knows and sees this body of awareness and all the signs of the external world in this way will have no binding attachments to views of self and what belongs to self or to the tendency of self pride.</td>
+    <td id='p6'>6. “A monk who knows and sees this body of awareness and all the signs of the external world in this way will have no binding attachments to views of self and what belongs to self or to the tendency of self conceit.</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.5b21'>「羅睺羅，比丘如是識身及外境界一切相，無有我、我所見、我慢使繫著者，超越疑心，遠離諸相，寂靜解脫。 是名比丘斷除愛欲，轉去諸結。 正無間等，究竟苦邊。」</td>
-    <td id='p7'>7. “Rāhula, if a monk has no binding attachments to views of self and what belongs to self or to the tendency of self pride regarding this body of awareness and all the signs of the external world, he goes beyond doubts, becomes free of these signs, and is peacefully liberated. That monk is called one who has stopped craving desires and turned away from the bonds. Right at that moment, he reaches the final end of suffering.”</td>
+    <td id='p7'>7. “Rāhula, if a monk has no binding attachments to views of self and what belongs to self or to the tendency of self conceit regarding this body of awareness and all the signs of the external world, he goes beyond doubts, becomes free of these signs, and is peacefully liberated. That monk is called one who has stopped craving desires and turned away from the bonds. Right at that moment, he reaches the final end of suffering.”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.5b24'>時，羅睺羅聞佛所說歡喜，奉行。</td>
