--- a/01_agama/samyukta/04/SA4_9.md
+++ b/01_agama/samyukta/04/SA4_9.md
@@ -27,7 +27,7 @@ next: SA4_10.html
   </tr>
   <tr>
     <td class="ch" title='t125.2.105a5'>「諸比丘，云何無有關鍵？ 謂五下分結已斷，已知。 是名離關鍵。 云何平治城塹？ 無明謂之深塹。 彼得斷知。 是名平治城塹。 云何度諸嶮難？ 謂無際生死，究竟苦邊。 是名度諸嶮難。 云何解脫結縛？ 謂愛已斷，已知。 云何建立聖幢？ 謂我慢已斷，已知。 是名建立聖幢。」</td>
-    <td id='p4'>4. “Monks, how does he have no barred gate? It means that he has ended the five lower bonds and has known it. This is called being free of the barred gate. How has he leveled off the city moat? Ignorance is known as the deep moat. He brings it to an end and knows it. This is called leveling off the city moat. How has he crossed the dangerous heights? It means birth and death without end and reaching the final end of suffering. This is called crossing the dangerous heights. How is he liberated from bondage? It means he has ended craving and has known it. How does he plant the noble flag? It means he has ended self pride and has known it. This is called planting the noble flag.”<sup id="ref2"><a href="#n2">2</a></sup></td>
+    <td id='p4'>4. “Monks, how does he have no barred gate? It means that he has ended the five lower bonds and has known it. This is called being free of the barred gate. How has he leveled off the city moat? Ignorance is known as the deep moat. He brings it to an end and knows it. This is called leveling off the city moat. How has he crossed the dangerous heights? It means birth and death without end and reaching the final end of suffering. This is called crossing the dangerous heights. How is he liberated from bondage? It means he has ended craving and has known it. How does he plant the noble flag? It means he has ended self conceit and has known it. This is called planting the noble flag.”<sup id="ref2"><a href="#n2">2</a></sup></td>
   </tr>
   <tr>
     <td class="ch" title='t125.2.105a11'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
@@ -41,7 +41,7 @@ next: SA4_10.html
 
 <ol class="notes-list">
 <li id="n1">This is <em>sūtra</em> no. 387 in the <cite>Taisho</cite> edition and no. 550 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0104c27" target="_blank">T99.2.104c27-5a12</a>). It’s partially parallel with <a href="https://suttacentral.net/an5.71" target="_blank">AN 5.71</a>, sharing a very similar set of esoteric analogies for an <em>arhat</em>. [<a href="#ref1">back</a>]</li>
-<li id="n2">Compare this commentary with the one found in AN 5.71. Here “no barred gate” (無有關鍵) means ending the five lower bonds; in AN 5.71 this corresponds to P. <em>niraggaḷa</em> (“unbarred”). “Leveled off city moat” (平治城塹) means ending ignorance; in AN 5.71, P. <em>saṅkiṇṇaparikha</em> ("filled-in ditch") means ending rebirth. Ending ignorance instead is the meaning of P. <em>ukkhittapaligha</em> (“lifted crossbar”). “Crossing the dangerous heights” (度諸嶮難) here means ending the suffering of endless rebirths; in AN 5.71, the end of rebirth is represented by P. <em>saṅkiṇṇaparikha</em> (“filling in the ditch”). Being liberated from bondage (解脫結縛) refers to ending craving here; in AN 5.71, ending craving is likened to P. <em>abbūḷhesika</em> (“pulling up the pillar”). Finally, “planting the noble flag” (建立聖幢) here refers to ending self pride; in AN 5.71, ending self-conceit (P. <em>asmimāno</em>) is likened to P. <em>pannaddhajo pannabhāro visaṁyutto</em> (“lowered flag, burden set down, and unyoked”).<br/>
+<li id="n2">Compare this commentary with the one found in AN 5.71. Here “no barred gate” (無有關鍵) means ending the five lower bonds; in AN 5.71 this corresponds to P. <em>niraggaḷa</em> (“unbarred”). “Leveled off city moat” (平治城塹) means ending ignorance; in AN 5.71, P. <em>saṅkiṇṇaparikha</em> ("filled-in ditch") means ending rebirth. Ending ignorance instead is the meaning of P. <em>ukkhittapaligha</em> (“lifted crossbar”). “Crossing the dangerous heights” (度諸嶮難) here means ending the suffering of endless rebirths; in AN 5.71, the end of rebirth is represented by P. <em>saṅkiṇṇaparikha</em> (“filling in the ditch”). Being liberated from bondage (解脫結縛) refers to ending craving here; in AN 5.71, ending craving is likened to P. <em>abbūḷhesika</em> (“pulling up the pillar”). Finally, “planting the noble flag” (建立聖幢) here refers to ending self conceit; in AN 5.71, ending self-conceit (P. <em>asmimāno</em>) is likened to P. <em>pannaddhajo pannabhāro visaṁyutto</em> (“lowered flag, burden set down, and unyoked”).<br/>
 We can see from this comparison that these two texts appear to preserve some common set of analogies that have changed somewhat over time in each tradition. The meanings are more consistent than the analogies themselves. [<a href="#ref2">back</a>]</li>
 </ol>
 <hr/>
